<resources>
    <string name="app_name">江宁农业</string>
    <string name="intelligent_pastoral">智能田园</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">用户名</string>
    <string name="phone_num">手机号</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="password">密码</string>
    <string name="original_password">原始密码</string>
    <string name="new_password">新密码</string>
    <string name="set_password">设置密码</string>
    <string name="login_password">登录密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_">忘记密码？</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="commit">提交</string>
    <string name="sensor_list_title">传感器数据</string>
    <string name="video_list_title">视频监控</string>
    <string name="now_register">立即注册</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验证码</string>
    <string name="back">返回</string>
    <string name="all">全部</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="dialog_msg">在首页显示该内容</string>
    <string name="usernam_or_password_empty">用户名或密码不能为空</string>
    <string name="usernam_empty">用户名不能为空</string>
    <string name="dialog_login">登录中。。。</string>
    <string name="dialog_loading">正在为您拼命加载。。。</string>
    <string name="net_error">网络未连接</string>
    <string name="sensorlist_station">监控%s</string>
    <string name="sensorlist_address">地点：%s</string>
    <string name="sensorlist_manager">负责人：%s</string>
    <string name="unit_temp">℃</string>
    <string name="unit_humi">%</string>
    <string name="unit_light">lx</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="cpb_default_rotation_speed">1</string>
    <string name="cpb_default_sweep_speed">1</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="server_error">服务器故障</string>
</resources>
