<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600px"
    android:layout_height="350px"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.3"
        android:gravity="center"
        android:textSize="19sp"
        android:text="@string/dialog_msg"
        android:textColor="@color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" >

        <TextView
            android:id="@+id/dialog_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/cancle"
            android:textColor="@color/cc" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/dialog_sure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/cc" />
    </LinearLayout>

</LinearLayout>