<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/titile_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="74px"
        android:background="@color/cc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134px"
        android:background="@android:color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="30px"
            android:text="@string/user_name"
            android:textSize="50px" />

        <EditText
            android:id="@+id/forget_et_user_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/input_phone_num"
            android:inputType="number"
            android:paddingLeft="30px"
            android:textColorHint="@color/color_hint"
            android:textSize="50px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="30px"
        android:background="@color/view_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134px"
        android:background="@android:color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="30px"
            android:text="@string/original_password"
            android:textSize="50px" />

        <EditText
            android:id="@+id/forget_et_original_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:inputType="numberPassword"
            android:paddingLeft="30px"
            android:textColor="@color/color_hint"
            android:textSize="50px" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="34px"
        android:background="@color/cc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="134px"
        android:background="@android:color/white" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="30px"
            android:text="@string/new_password"
            android:textSize="50px" />

        <EditText
            android:id="@+id/forget_et_new_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:inputType="numberPassword"
            android:paddingLeft="30px"
            android:textColorHint="@color/color_hint"
            android:textSize="50px" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/view_bg" />

    <Button
        android:id="@+id/forget_btn_commit"
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="90px"
        android:background="@color/green"
        android:text="@string/commit"
        android:textColor="@color/f1" />

</LinearLayout>